--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.13.1",
     "core-js": "^3.9.1",
+    "nanoid": "^3.1.22",
     "nuxt": "^2.15.3",
     "vuex-map-fields": "^1.4.1"
   },
