--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "core-js": "^3.9.1",
     "nanoid": "^3.1.22",
     "nuxt": "^2.15.3",
+    "randomcolor": "^0.6.2",
+    "vue-randomcolor": "^1.0.4",
     "vuex-map-fields": "^1.4.1"
   },
   "devDependencies": {
