--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.13.1",
     "core-js": "^3.9.1",
+    "joi": "^17.4.0",
     "nanoid": "^3.1.22",
     "nuxt": "^2.15.3",
     "randomcolor": "^0.6.2",
+    "vue-lodash": "^2.1.2",
     "vue-randomcolor": "^1.0.4",
     "vuex-map-fields": "^1.4.1"
   },
