--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "nuxt": "^2.15.3",
     "randomcolor": "^0.6.2",
     "vue-lodash": "^2.1.2",
+    "vue-particles": "^1.0.9",
     "vue-randomcolor": "^1.0.4",
     "vuex-map-fields": "^1.4.1"
   },
