--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vue-lodash": "^2.1.2",
     "vue-particles": "^1.0.9",
     "vue-randomcolor": "^1.0.4",
+    "vue-the-mask": "^0.11.1",
     "vuex-map-fields": "^1.4.1"
   },
   "devDependencies": {
