--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "nanoid": "^3.1.22",
     "nuxt": "^2.15.3",
     "randomcolor": "^0.6.2",
+    "secure-ls": "^1.2.6",
     "v-mask": "^2.2.4",
     "vue-lodash": "^2.1.2",
     "vue-particles": "^1.0.9",
     "vue-randomcolor": "^1.0.4",
     "vue-sweetalert2": "^4.2.1",
-    "vuex-map-fields": "^1.4.1"
+    "vuex-map-fields": "^1.4.1",
+    "vuex-persistedstate": "^4.0.0-beta.3"
   },
   "devDependencies": {
     "@nuxtjs/vuetify": "^1.11.3"
