--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
-    "generate": "nuxt generate"
+    "generate": "nuxt generate",
+    "smart-generate": "yarn generate && yarn start"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.1",
@@ -25,6 +26,7 @@
     "vuex-persistedstate": "^4.0.0-beta.3"
   },
   "devDependencies": {
+    "@nuxtjs/netlify-files": "^1.2.0",
     "@nuxtjs/vuetify": "^1.11.3"
   }
 }
