--- a/package.json
+++ b/package.json
@@ -15,17 +15,23 @@
     "joi": "^17.4.0",
     "nanoid": "^3.1.22",
     "nuxt": "^2.15.3",
+    "qs": "^6.10.1",
     "randomcolor": "^0.6.2",
     "secure-ls": "^1.2.6",
+    "sockjs-client": "^1.5.1",
     "v-mask": "^2.2.4",
     "vue-lodash": "^2.1.2",
     "vue-particles": "^1.0.9",
     "vue-randomcolor": "^1.0.4",
+    "vue-recaptcha": "^1.3.0",
     "vue-sweetalert2": "^4.2.1",
+    "vue-toastification": "^1.7.11",
     "vuex-map-fields": "^1.4.1",
-    "vuex-persistedstate": "^4.0.0-beta.3"
+    "vuex-persistedstate": "^4.0.0-beta.3",
+    "webstomp-client": "^1.2.6"
   },
   "devDependencies": {
+    "@nuxtjs/moment": "^1.6.1",
     "@nuxtjs/netlify-files": "^1.2.0",
     "@nuxtjs/vuetify": "^1.11.3"
   }
