--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.13.1",
     "core-js": "^3.9.1",
+    "gsap": "^3.6.1",
     "joi": "^17.4.0",
     "nanoid": "^3.1.22",
     "nuxt": "^2.15.3",
