--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.1",
+    "@nuxtjs/recaptcha": "^1.0.4",
+    "babel-runtime": "^6.26.0",
     "core-js": "^3.9.1",
     "gsap": "^3.6.1",
     "joi": "^17.4.0",
@@ -22,11 +24,13 @@
     "sockjs-client": "^1.5.1",
     "v-mask": "^2.2.4",
     "vue-lodash": "^2.1.2",
+    "vue-markdown": "^2.2.4",
     "vue-particles": "^1.0.9",
     "vue-randomcolor": "^1.0.4",
     "vue-recaptcha": "^1.3.0",
     "vue-sweetalert2": "^4.2.1",
     "vue-toastification": "^1.7.11",
+    "vuetify-markdown-editor": "^3.3.3",
     "vuex-map-fields": "^1.4.1",
     "vuex-persistedstate": "^4.0.0-beta.3",
     "webstomp-client": "^1.2.6"
